create report skeleton, add preprocess section

--- a/doc/format.tex
+++ b/doc/format.tex
@@ -1,1 +1,12 @@
 \usepackage[utf8]{inputenc}
+\usepackage[english]{babel}
+
+\usepackage[total={16.5cm, 22cm}]{geometry}
+\usepackage{subfiles}
+
+% figures
+\usepackage{graphicx}
+\usepackage{color}
+\usepackage{subcaption}
+
+\usepackage{mathtools}
