complete raster image figures, small contribs

--- a/doc/sections/cover.tex
+++ b/doc/sections/cover.tex
@@ -8,28 +8,28 @@
         
         \vfill
 
-        {\Large {\sc \courseName}}\\[1cm]
-        {\Large {\courseNumber}}\\
+        {\large {\sc \courseName}}\\[1cm]
+        {\large {\courseNumber}}\\
 
         \vfill
 
         \hrule
         \vspace{8mm}
-        {\bfseries \Huge \docTitle}\\
+        {\bfseries \LARGE \docTitle}\\
         \vspace{6mm}
-        {\sc \Large \docType}\\
+        {\sc \large \docType}\\
         \vspace{9mm}
         \hrule
 
         \vfill
 
-        {\LARGE \docDate}\\
+        {\Large \docDate}\\
 
         \vfill
 
-        {\Large \bfseries Authors}\\[1cm]
+        {\large \bfseries Authors}\\[1cm]
 
-        \large
+        \normalsize
         \def\arraystretch{1.5}
         \def\tabcolsep{1.5cm}
         \begin{tabular}{lr}
