--- a/doc/sections/result.tex
+++ b/doc/sections/result.tex
@@ -3,5 +3,19 @@
 \begin{document}
 
 \section{Result}
+\begin{equation*}
+    \begin{bmatrix}
+        24 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
+        0 & 25 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
+        1 & 0 & 25 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
+        0 & 0 & 0 & 23 & 0 & 0 & 0 & 0 & 0 & 0\\
+        0 & 0 & 0 & 0 & 20 & 1 & 1 & 0 & 1 & 1\\
+        0 & 0 & 0 & 0 & 0 & 24 & 0 & 0 & 0 & 0\\
+        0 & 0 & 0 & 0 & 0 & 0 & 23 & 0 & 0 & 0\\
+        0 & 0 & 0 & 0 & 0 & 0 & 0 & 25 & 0 & 0\\
+        0 & 0 & 0 & 2 & 0 & 0 & 1 & 0 & 24 & 1\\
+        0 & 0 & 0 & 0 & 5 & 0 & 0 & 0 & 0 & 23
+    \end{bmatrix}
+\end{equation*}
 
 \end{document}
