add incorrect digits figure

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -7,11 +7,10 @@
 
 \subfile{doc/sections/cover}
 \clearpage\tableofcontents
-\clearpage\subfile{doc/sections/intro}
+\subfile{doc/sections/intro}
 \clearpage\subfile{doc/sections/method}
 \clearpage\subfile{doc/sections/result}
 
-\clearpage
 \bibliography{doc/ref.bib}{}
 \bibliographystyle{plain}
 
