--- a/doc/sections/cover.tex
+++ b/doc/sections/cover.tex
@@ -8,6 +8,7 @@
         
         \vfill
 
+        {\large {\sc Lappeenranta University of Technology}}\\[1cm]
         {\large {\sc \courseName}}\\[1cm]
         {\large {\courseNumber}}\\
 
