write on report

--- a/doc/format.tex
+++ b/doc/format.tex
@@ -8,6 +8,8 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{subcaption}
+\usepackage{tikz}
+\usetikzlibrary{matrix}
 
 \usepackage{mathtools}
 
