--- a/doc/ref.bib
+++ b/doc/ref.bib
@@ -6,3 +6,12 @@
    year = 1991,
    pages = {143-152}
 }
+
+@book{hart-pattern,
+    author = {Richard O. Duda and Peter E. Hart and David G. Stork},
+    title = {Pattern Classification},
+    publisher = {Wiley-Interscience},
+    year = 2001,
+    edition = 2,
+    isbn = {0471056693}
+}
