--- a/doc/sections/intro.tex
+++ b/doc/sections/intro.tex
@@ -2,6 +2,15 @@
 
 \begin{document}
 
+\vfill
 \section{Introduction}
+
+As part of the course ``Pattern Recognition and Machine Learning'' at
+Lappeenranta University of Technology, a project to classify digits written by
+hand in 3D has been completed by a team of two students; \authorA{} and
+\authorB{}. A training set of 1000 written digits was given to the team and a
+classifier in the form of a multilayer perceptron was implemented and trained
+using the set. The work and resulting classifier is documented in this report.
+\vfill
 
 \end{document}
