--- a/doc/sections/result.tex
+++ b/doc/sections/result.tex
@@ -3,10 +3,16 @@
 \begin{document}
 
 \section{Result}
+A classifier has been implemented and trained as described in the previous
+section.
 
+\subsection{Validation}
+
+\subsection{Testing}
 \begin{figure}
-    \resizebox{\textwidth}{!}{\input{build/fig/incorrect.tex}}
-    \caption{All incorrectly classified digits from the validation set (N=200).}
+    \hspace*{-2cm}
+    \resizebox{1.2\textwidth}{!}{\input{build/fig/incorrect.tex}}
+    \caption{All incorrectly classified digits from the test set (N=200).}
     \label{fig:incorrect}
 \end{figure}
 
@@ -16,19 +22,18 @@
         & & \multicolumn{10}{c}{Actual digit}\\
         \multirow{10}{*}{\rotatebox{90}{Guessed digit}}
         &   & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9\\\hline
-        & 0 & 19 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 0\\
-        & 1 & 0 & 20 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
-        & 2 & 0 & 0 & 20 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\
-        & 3 & 0 & 0 & 0 & 19 & 1 & 0 & 0 & 0 & 0 & 0\\
-        & 4 & 0 & 0 & 0 & 1 & 19 & 0 & 0 & 0 & 0 & 1\\
-        & 5 & 0 & 0 & 0 & 0 & 0 & 17 & 0 & 0 & 0 & 0\\
-        & 6 & 1 & 0 & 0 & 0 & 0 & 2 & 19 & 0 & 0 & 0\\
-        & 7 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 19 & 0 & 0\\
-        & 8 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 19 & 0\\
-        & 9 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 1 & 19\\
+        & 0 & 20 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
+        & 1 & 0 & 20 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0\\
+        & 2 & 0 & 0 & 20 & 0 & 0 & 0 & 0 & 0 & 0 & 0\\
+        & 3 & 0 & 0 & 0 & 18 & 0 & 0 & 0 & 0 & 0 & 0\\
+        & 4 & 0 & 0 & 0 & 0 & 20 & 0 & 0 & 0 & 1 & 0\\
+        & 5 & 0 & 0 & 0 & 0 & 0 & 20 & 0 & 1 & 0 & 0\\
+        & 6 & 0 & 0 & 0 & 0 & 0 & 0 & 19 & 0 & 0 & 0\\
+        & 7 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 18 & 0 & 0\\
+        & 8 & 0 & 0 & 0 & 2 & 0 & 0 & 1 & 0 & 19 & 0\\
+        & 9 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 20\\
     \end{tabular}
-    \caption{Confusion matrix from classifications of the validation dataset.}
+    \caption{Confusion matrix from classifications of the test dataset.}
     \label{fig:confusion}
 \end{table}
-
 \end{document}
