write result, method about training, adjust figures to new classifier

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -9,7 +9,7 @@
 \clearpage\tableofcontents
 \subfile{doc/sections/intro}
 \clearpage\subfile{doc/sections/method}
-\clearpage\subfile{doc/sections/result}
+\subfile{doc/sections/result}
 
 \bibliography{doc/ref.bib}{}
 \bibliographystyle{plain}
