--- a/doc/sections/method.tex
+++ b/doc/sections/method.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
 \section{Method}
-This section covers the steps taken in order to create and evaluate the
+This section covers all the steps taken in order to create and evaluate the
 classifer.
 
 \subsection{Partitioning of training data}
@@ -12,9 +12,9 @@ for the training process; the training set and the validation set. The training
 set is used to train multiple classifiers with different parameters, and the
 validation set is used to select which of these classifiers to use. The third
 and final set, the test set, is used after the training is completed in order
-to evaluate how well the classifier performs. The subsets were split uniformly
-for each digit and the distribution was 70\%, 10\% and 20\% for the training,
-validation and test set respectively.
+to evaluate how well the classifier performs. The subsets were selected
+randomly but uniformly for each digit. The distribution was 70\%, 10\% and 20\%
+for the training, validation and test set respectively.
 
 \subsection{Preprocessing}
 The input data for each data is given as a list of 3D-coordinates that together
@@ -61,10 +61,10 @@ neural network.
     \label{fig:scaling}
 \end{figure}
 Because the digits are written at different locations and in different sizes,
-rescaling and translation is performed to make similar shaped images
-comparable. Only the shape of the digit is interesting and the location and
-scale can therefore be changed without losing any useful information. Figure
-\ref{fig:scaling} shows two sixes being scaled.
+scaling and translation is performed to make similar shaped images comparable.
+Only the shape of the digit is useful, the location and scale can be changed
+without losing any useful information. Figure \ref{fig:scaling} shows two sixes
+being scaled.
 
 \subsubsection{Rasterization}
 \begin{figure}
@@ -153,6 +153,18 @@ shortly how the classifier of this project was implemented.
 % TODO math expressions
 
 \subsubsection{Training}
+A classifier, i.e. the weights for the network, are created by applying the
+feedforward and backpropagation operation on all of the preprocessed digits.
+This is done in multiple iterations each time using the previous weights for
+the current iteration. The initial weights are selected randomly. The
+implementation performs up to 1000 iterations before abrupting.
+
+This whole process is done multiple times but with different parameters. In the
+implementation, the parameter that is altered between the iterations is the
+number of neurons in the hidden layer. When multiple classifiers has been
+created, the one that performs the best on the validation set is selected and
+used. The performance is measured by the percentage of correctly classified
+digits, i.e. the average of the f1 score for all the classes.
 
 \subsubsection{Classification}
 In order to classify a digit the the digit is preprocessed as described above
