--- a/doc/report.tex
+++ b/doc/report.tex
@@ -10,6 +10,7 @@
 \subfile{doc/sections/intro}
 \clearpage\subfile{doc/sections/method}
 \subfile{doc/sections/result}
+\subfile{doc/sections/discussion}
 
 \bibliography{doc/ref.bib}{}
 \bibliographystyle{plain}
