finish feedforward and backpropagation descriptions

--- a/doc/fig/mlp.tex
+++ b/doc/fig/mlp.tex
@@ -28,7 +28,7 @@
     \foreach \ai in {2,4}
         \node at (mat-\ai-1) {$x_{1}$};
     \node at (mat-6-1) {$\vdots$};
-    \node at (mat-8-1) {$x_{W}$};
+    \node at (mat-8-1) {$x_{\beta}$};
     \node at (mat-10-1) {$1$};
 
     \node at (mat-3-2) {$y^h_1$};
