--- a/doc/sections/result.tex
+++ b/doc/sections/result.tex
@@ -61,7 +61,7 @@ and testing are shown in \ref{fig:runs}.
     \centering
     \begin{tabular}{rrrrr|rrr}
         dilation & set distribution & W & $\rho$ & iterations &
-        hidden & F1 (validation) & F1 (test) \\\hline
+        H & F1 (validation) & F1 (test) \\\hline
 
         yes & (70, 10, 20) & 20 & 0.0001  & 1000 & 13 & 95.0\% & 96.5\% \\
         yes & (70, 10, 20) & 20 & 0.0001  & 1000 & 24 & 98.0\% & 92.5\% \\
